# log_analyzer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  zizmor.yml
CHANGELOG/: 0.1.0.md
docs/: api.md  index.md  installation.md  usage.md
src/log_analyzer/: __init__.py  analyzer.py  cli.py  utils.py
src/log_analyzer/templates/: report.html
templates/: report.html
tests/: pu.txt  test_log_analyzer.py
