[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "log-analyzer-cli"
version = "0.1.0"
description = "Cервис, формирующий статистический отчет на основании парсинга логов"
readme = "README.md"
authors = [
  {name = "setter", email = "lphp@mail.ru"}
]
maintainers = [
  {name = "setter", email = "lphp@mail.ru"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
license = {text = "MIT"}
dependencies = [
    "typer >= 0.26.7",
    "rich"
]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/rustruber/log_analyzer/issues"
changelog = "https://github.com/rustruber/log_analyzer/releases"
documentation = "https://rustruber.github.io/log_analyzer/"
homepage = "https://github.com/rustruber/log_analyzer"

[project.scripts]
log_analyzer = "log_analyzer.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120 # твоя любимая длина строки
target-version = "py313"  # твоя версия Python

[tool.ruff.lint]
select = [
    "E",    # ошибки pycodestyle
    "W",    # предупреждения pycodestyle
    "F",    # ошибки Pyflakes (неиспользуемые импорты, переменные)
    "I",    # сортировка импортов (isort)
    "UP",   # предложения по обновлению синтаксиса (pyupgrade)
    "B",    # поиск сомнительных конструкций (flake8-bugbear)
    "C4",   # улучшения для генераторов списков и словарей
    "T20",  # запрет на отладочные print()
    "T10",  # запрет на отладочный assert (на проде)
]

# От каких правил можно отказаться
ignore = [
    "E501",  # не ругаться на слишком длинные строки (этим займется форматтер)
    "B008",  # разрешить вызовы функций в аргументах по умолчанию
]

[tool.ruff.format]
quote-style = "double"  # использовать двойные кавычки

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/log_analyzer"]




